--- a/ParentChildStoryboard/Base.lproj/Main.storyboard
+++ b/ParentChildStoryboard/Base.lproj/Main.storyboard
@@ -29,8 +29,8 @@
                                     <constraint firstAttribute="height" constant="128" id="tas-Um-nVr"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xJj-Kx-uEa">
-                                <rect key="frame" x="0.0" y="156" width="343" height="128"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xJj-Kx-uEa">
+                                <rect key="frame" x="16" y="156" width="343" height="128"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="vhX-I4-DsP"/>
